<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.marta.starwar2.activity.MenuOption">

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="169dp"
        android:text="@string/starwar_name"
        android:textAlignment="center"

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_name"
        android:layout_marginTop="120dp">

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_search_black_24dp"
            android:text="@string/search"
            android:textAlignment="center"
            android:textSize="20sp"
            android:tint="@android:color/white" />

        <TextView
            android:id="@+id/tv_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_favorite_black_24dp"
            android:text="@string/favorite"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_view_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_supervisor_account_black_24dp"
            android:text="@string/view_all"
            android:textAlignment="center"
            android:textSize="20sp"
            android:tint="@android:color/white" />
    </LinearLayout>
</RelativeLayout>
